# gmonitor-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: deploy.yaml
src/: broker.py  main.py  parsers.py  services.py  settings.py
